colours in spanish

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h1>CSS Selector</h1>
-        <h2>Applying CSS to different parts of html</h2>
-        <p class = "note">1. Tag Name</p>
-        <br>
+    <h1>Colors</h1>
+    <h2>Learn the color in Spanish language</h2>
+    <br>
+    <h2 class="color-title" id="red">Rojo</h2>
+    <img src="https://tse1.mm.bing.net/th?id=OIP.r3cqaVNkhCjL25IEi3XC3wHaFj&pid=Api&rs=1&c=1&qlt=95&w=135&h=101" alt="red">
+    
+    <h2 class="color-title" id="blue">Azul</h2>
+    <img src="https://tse1.mm.bing.net/th?id=OIP.WJOrKmFTbS1XOJQ-VIcRJgHaEK&pid=Api&rs=1&c=1&qlt=95&w=181&h=101" alt="blue">
 
-        <ol>
-            <li class="note" value="2">Value of class attribute</li>
-            <li class="note" id="id-selector-demo" value="3">Value of id attribute</li>
-            <li class="note" value= "4" >Their attributes and value</li>
-            <li class="note" value="5">Target all element</li>
-        </ol>
+    <h2 class="color-title" id="orange">Anaranjado</h2>
+    <img src="https://tse1.mm.bing.net/th?id=OIP.2ASRu0e8rZF41KYX2qOd6AHaEo&pid=Api&rs=1&c=1&qlt=95&w=158&h=98" alt="orange">
+    
+    <h2 class="color-title" id="green">Verde</h2>
+    <img src="https://tse1.mm.bing.net/th?id=OIP.YVMcwO-T4oE-YBhmJ5Y5JwHaEo&pid=Api&rs=1&c=1&qlt=95&w=166&h=103" alt="green">
+
+    <h2 class="color-title" id="yellow">Amarillo</h2>
+    <img src="https://tse1.mm.bing.net/th?id=OIP.8212o3OwuUkAYT2H0oJa2AHaHa&pid=Api&rs=1&c=1&qlt=95&w=114&h=114" alt="yellow">
 </body>
 </html>
