--- a/index.html
+++ b/index.html
@@ -7,22 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Colors</h1>
-    <h2>Learn the color in Spanish language</h2>
-    <br>
-    <h2 class="color-title" id="red">Rojo</h2>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.r3cqaVNkhCjL25IEi3XC3wHaFj&pid=Api&rs=1&c=1&qlt=95&w=135&h=101" alt="red">
-    
-    <h2 class="color-title" id="blue">Azul</h2>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.WJOrKmFTbS1XOJQ-VIcRJgHaEK&pid=Api&rs=1&c=1&qlt=95&w=181&h=101" alt="blue">
-
-    <h2 class="color-title" id="orange">Anaranjado</h2>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.2ASRu0e8rZF41KYX2qOd6AHaEo&pid=Api&rs=1&c=1&qlt=95&w=158&h=98" alt="orange">
-    
-    <h2 class="color-title" id="green">Verde</h2>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.YVMcwO-T4oE-YBhmJ5Y5JwHaEo&pid=Api&rs=1&c=1&qlt=95&w=166&h=103" alt="green">
-
-    <h2 class="color-title" id="yellow">Amarillo</h2>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.8212o3OwuUkAYT2H0oJa2AHaHa&pid=Api&rs=1&c=1&qlt=95&w=114&h=114" alt="yellow">
+   <h1>Importan CSS Properties</h1>
+   <p class="color">color</p>
+   <p class="font_size">Font size</p>
+   <p class="font_weight">Font Weight</p>
+   <p class="font_family">Font Family</p>
+   <p class="text_align">Text Align</p>
 </body>
 </html>
